	* socket.d: no need to guard including <unistd.h> - it is always
	provided by the gnulib module unistd
	* unix.d: no need to guard including <unistd.h>, <sys/time.h>,
	<time.h>, <sys/utsname.h> - they are always provided by gnulib
	* aridecl.d, arilev0.d, arilev1.d, lispbibl.d, win32.d:
	remove the last vestiges of Borland support
	* _clisp.c: add '#include "config.h"' (necessary for gnulib)

2011-05-17  Sam Steingold  <sds@gnu.org>

	* configure: detect building for mingw from $CC -dumpmachine

2011-05-17  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): DEFFLAGSET(..., !CONST)
	means that to add CONST to flags one passes NIL to the lisp function

2011-05-16  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (language): static, not global
	(current_language_o): global, not static
	(init_language): do not call bindtextdomain() with a nonexistent
	localedir because that it is usually called by SET-CURRENT-LANGUAGE
	with a NULL second argument
	* lispbibl.d (current_language_o) [!LANGUAGE_STATIC]: declare extern
	* spvw.d (init_memory): update initialization of O(current_language)
	* i18n.d (SET-CURRENT-LANGUAGE): use current_language_o() to set
	O(current_language)

2011-05-13  Sam Steingold  <sds@gnu.org>

	* pathname.d (possible_symlink): remove (linux 2.0.35 is long gone)

2011-05-10  Sam Steingold  <sds@gnu.org>

	* pathname.d (starp): remove
	(multiwild_char_p, singlewild_char_p, wild_char_p): use
	consistently throughout the file
	(DEF_WILD_CHECKER): new macro
	(word_wild_p, wild_p): define using it

2011-05-04  Sam Steingold  <sds@gnu.org>

	* stream.d (IS_EINVAL_EXTRA) [UNIX_SUNOS5]: add ENXIO

2011-05-04  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): replace close-hook with
	fd-hook (renamed in gnulib 2011-04-19)
	(gnulib-imported): pipe stderr to $(GNULIB_IMPORTED_LOG) too

2011-05-04  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (init_language): fix the 2011-04-10 patch (use
	strcpy instead of strcat)
